<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baumarkt App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Artikelauswahl</string>
    <string name="category">Kategorie</string>
    <string name="search">Suchen</string>
    <string name="search_headline">Artikelsuche</string>
    <string name="articelselecttitle">Was möchten Sie tun?</string>

    <string-array name="articleselectchoice">
        <item>Artikel auf Einkaufsliste setzen</item>
        <item>Artikelstandort anzeigen</item>
        <item>Abbruch</item>
    </string-array>

    <string name="detail_view_headline">Artikeldetail</string>
    <string name="detail_view_name">Artikelname:</string>
    <string name="detail_view_standort">Standort:</string>
    <string name="detail_view_preis">Preis:</string>
    <string name="detail_view_beschreibung">Beschreibung:</string>
    <string name="OK">Ok</string>
    <string name="Warenkorb_add">Artikel wurde dem Warenkorb hinzugefügt</string>
    <string name="Warenkorb_add_title">Artikel hinzugefügt</string>
    <string name="einkaufsliste_headline">Einkaufsliste</string>
    <string name="title_activity_einkaufsliste">Einkaufsliste</string>
    <string name="title_activity_map_actitivity">MapActitivity</string>
    <string name="headline_map">Baumarktübersicht</string>

</resources>