<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.example.test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_view_headline"
        android:textColor="@color/Headline1Color"
        android:textSize="@dimen/Headline1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_view_name" />

            <TextView
                android:id="@+id/textViewArtikelname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_view_standort" />

            <TextView
                android:id="@+id/textViewStandort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_view_preis" />

            <TextView
                android:id="@+id/textViewPreis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_view_beschreibung" />

            <TextView
                android:id="@+id/textViewBeschreibung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:maxLines="10"
                android:minLines="3"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:paddingTop="20dp"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="TextView" />

        </TableRow>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/warenkorb" />
    </TableLayout>

</LinearLayout>